fix problem with zoom tools not showing (ICS)
see https://github.com/CloudMade/Leaflet/issues/335

--- a/assets/www/app.css
+++ b/assets/www/app.css
@@ -311,6 +311,14 @@ button.requires-location {
 	bottom: 0px;
 }
 
+.leaflet-control-container {
+	-webkit-transform: translate3d(0,0,0);
+	position: relative;
+	top: 0;
+	left: 0;
+	z-index: 2;
+}
+
 .leaflet-marker-pane,
 .leaflet-shadow-pane,
 .leaflet-overlay-pane {
